--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "gridfs": "^1.0.0",
     "lite-server": "^2.6.1",
     "mongoose": "^6.9.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20"
   }
 }
