--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.18.2",
     "gridfs": "^1.0.0",
+    "jsonwebtoken": "^9.0.2",
     "lite-server": "^2.6.1",
     "mongoose": "^6.9.1",
     "multer": "^1.4.5-lts.1",
