--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "bcryptjs": "^3.0.2",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.5.0",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "gridfs": "^1.0.0",
+    "https": "^1.0.0",
     "jsonwebtoken": "^9.0.2",
     "lite-server": "^2.6.1",
     "mongoose": "^6.9.1",
